--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin id="app-entitlements" version="0.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0">
-  <name>AppEntitlements</name>
+<plugin id="cordova-plugin-app-entitlements" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0">
+  <name>cordova-plugin-app-entitlements</name>
 
   <preference name="APS_ENV" />
 
