--- a/plugin.xml
+++ b/plugin.xml
@@ -5,11 +5,15 @@
   <preference name="APS_ENV" />
 
   <platform name="ios">
+    
+    <!-- DISBALED - ??
     <config-file target="config.xml" parent="/*">
       <feature name="PushNotification">
         <param name="ios-package" value="PushPlugin"/>
       </feature>
     </config-file>
+    -->
+
     <config-file target="*-Info.plist" parent="UIBackgroundModes">
       <array>
         <string>remote-notification</string>
